Reduktion 2 und Greedy done + testCases